# test_data_comparison

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  reporter.rs
crates/core/: Cargo.toml
crates/core/src/: compare.rs  config.rs  lib.rs  reporter.rs  types.rs  value_cmp.rs
crates/sources/: Cargo.toml
crates/sources/src/: db.rs  file.rs  lib.rs
crates/sources/tests/: integration_tests.rs
crates/sources/tests/fixtures/: employees_a.csv  employees_b.csv  identical_a.tsv  products_a.json  products_b.json
examples/: db_compare.toml  employees.toml
src/: lib.rs  main.rs  types.rs
src/compare/: engine.rs  mod.rs  result.rs
src/output/: formatter.rs  mod.rs
src/sources/: db.rs  file.rs  mod.rs
tests/: integration_tests.rs
