[package]
name = "data_comparator"
version = "0.1.0"
edition = "2021"
description = "Compare data between files (CSV/JSON/TSV) and databases (SQLite/PostgreSQL/MySQL)"
authors = []
license = "MIT"

[[bin]]
name = "data-comparator"
path = "src/main.rs"

[lib]
name = "data_comparator"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing
csv = "1"

# Database – SQLite / PostgreSQL / MySQL via sqlx
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "mysql",
    "sqlite",
] }

# Output formatting
comfy-table = "7"
colored = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
indexmap = { version = "2", features = ["serde"] }
itertools = "0.13"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["full"] }
