[workspace]
members = [
    "crates/core",
    "crates/sources",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async
tokio       = { version = "1", features = ["full"] }
# Serde
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# Error handling
anyhow      = "1"
thiserror   = "1"
# Data structures
indexmap    = { version = "2", features = ["serde"] }
# CSV
csv         = "1"
# Database (features set per-crate; only version is shared)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls"] }
# Config
toml        = "0.8"
# Output / display
comfy-table = "7"
colored     = "2"
# Misc
itertools   = "0.13"
# Dev
tempfile    = "3"
