[package]
name = "dc_core"
description = "Core types, comparison engine, traits, and report model for data-comparator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace     = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
indexmap.workspace   = true
itertools.workspace  = true
toml.workspace       = true
